# apps/api/docs/swagger.json
@@ -155,18 +155,12 @@
         },
         "http.createUserRequest": {
             "type": "object",
-            "required": [
-                "email",
-                "username"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "username": {
-                    "type": "string",
-                    "maxLength": 6,
-                    "minLength": 2
+                    "type": "string"
                 }
             }
         },
